--- a/vue-project/.gitignore
+++ b/vue-project/.gitignore
@@ -17,6 +17,10 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+__pychache__
+*.sqlite3
+.conda
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
